# LeeAndroidLibrary

./: README.md  build.gradle  settings.gradle
.config/: build.bat
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: arrow.json  data.json
app/src/main/res/drawable/: bg_2094fa_40.xml  bg_212124_40.xml
app/src/main/res/layout/: activity_gaussian.xml  activity_glbitmap.xml  activity_keyboard.xml  activity_main.xml  activity_test.xml  activity_test2.xml  activity_test3.xml  activity_test_http.xml  activity_test_metronome.xml  bpm_item.xml  toast_layout.xml  view_home_icon_anim.xml
app/src/main/res/raw/: fs_blur  vs_base
app/src/main/res/values/: attrs.xml  dimens.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
audio/: build.gradle
audio/src/main/: AndroidManifest.xml
blur/: build.gradle
blur/src/main/: AndroidManifest.xml
blur/src/main/res/layout/: activity_gaussian.xml
gradle/wrapper/: gradle-wrapper.properties
http/: build.gradle
http/src/main/: AndroidManifest.xml
metronome/: build.gradle
metronome/src/main/: AndroidManifest.xml
metronome/src/main/res/drawable/: ic_metronome.xml
metronome/src/main/res/raw/: fs_base  fs_blur  fs_burr  fs_illusion  fs_jitter  fs_soul  fs_video  fs_vsoul
metronome/src/main/res/values/: attrs.xml
video/: build.gradle
video/src/main/: AndroidManifest.xml
video/src/main/cpp/: CMakeLists.txt  native-lib.cpp
video/src/main/cpp/lame/: fft.c  set_get.h  util.h
video/src/main/res/raw/: fs_base  fs_blur  fs_flash  fs_video  fs_video_base  vs_base
(+137 files in other folders)
